--- a/examples/minimal-app/index.html
+++ b/examples/minimal-app/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <title>Minimal App – cher-webapp-core</title>
+
+  <!-- Designsystem -->
+  <link rel="stylesheet" href="../../lib/design/colors.css">
+  <link rel="stylesheet" href="../../lib/design/theme.css">
+  <link rel="stylesheet" href="../../lib/design/tailwind.css">
+</head>
+<body class="bg-app">
+
+  <div class="app-container">
+    <header class="mb-6">
+      <h1>Meine erste App mit cher-webapp-core</h1>
+      <p class="text-muted">
+        Dieses Beispiel nutzt das minimale Designsystem v0.1.0.
+      </p>
+    </header>
+
+    <main class="space-y-4">
+      <section class="card">
+        <h2>Beispiel-Card</h2>
+        <p>Diese Card nutzt die Klassen aus <code>theme.css</code> und Farben aus <code>colors.css</code>.</p>
+      </section>
+    </main>
+  </div>
+
+</body>
+</html>
 
