--- a/examples/minimal-app/pages/header-demo.html
+++ b/examples/minimal-app/pages/header-demo.html
@@ -9,7 +9,8 @@
     <!-- Tailwind und Framework laden -->
     <script src="/cher-webapp-core/lib/core/init.js"></script>
     <script src="/cher-webapp-core/lib/core/config.js"></script>
-    <script src="/cher-webapp-core/lib/core/loader.js"></script>
+    <script type="module" src="/cher-webapp-core/lib/core/loader.js"></script>
+
 
 </head>
 
