--- a/examples/minimal-app/index.html
+++ b/examples/minimal-app/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>Minimal App – cher-webapp-core</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Minimal App – cher-webapp-core</title>
 
-  <!-- Designsystem -->
-  <link rel="stylesheet" href="../../lib/design/colors.css">
-  <link rel="stylesheet" href="../../lib/design/theme.css">
-  <link rel="stylesheet" href="../../lib/design/tailwind.css">
+    <!-- Framework-Core laden (GitHub Pages kompatibel) -->
+    <script src="/cher-webapp-core/lib/core/init.js"></script>
+    <script src="/cher-webapp-core/lib/core/config.js"></script>
+    <script type="module" src="/cher-webapp-core/lib/core/loader.js"></script>
+
+    <style>
+        body {
+            margin: 0;
+            font-family: system-ui, sans-serif;
+            background: #f7f7f8;
+        }
+    </style>
 </head>
-<body class="bg-app">
 
-  <div class="app-container">
-    <header class="mb-6">
-      <h1>Meine erste App mit cher-webapp-core</h1>
-      <p class="text-muted">
-        Dieses Beispiel nutzt das minimale Designsystem v0.1.0.
-      </p>
-    </header>
+<body>
 
-    <main class="space-y-4">
-      <section class="card">
-        <h2>Beispiel-Card</h2>
-        <p>Diese Card nutzt die Klassen aus <code>theme.css</code> und Farben aus <code>colors.css</code>.</p>
-      </section>
-    </main>
-  </div>
+    <!-- Layout laden -->
+    <div data-include="/cher-webapp-core/examples/minimal-app/layout/minimal-layout.html"></div>
+
+    <script>
+        // Startseite laden, sobald alle Includes fertig sind
+        document.addEventListener("includesLoaded", () => {
+            loadPage("/cher-webapp-core/examples/minimal-app/pages/welcome.html");
+        });
+
+        async function loadPage(url) {
+            const target = document.getElementById("app-page-content");
+            const html = await fetch(url).then(r => r.text());
+            target.innerHTML = html;
+        }
+    </script>
 
 </body>
 </html>
-
